Criação tela lista eleitor e Eleitor detalhe
Signed-off-by: Mariana Vieira <marianaovieira1@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Trabalho02-2018-1</string>
+    <string name="title_activity_lista_eleitor">ListaEleitor</string>
 </resources>
